--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "testing",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "install-deps": "npm install && pip install -r requirements.txt",
     "start": "node server.js"
   },
   "keywords": [],
@@ -20,3 +20,4 @@
   },
   "description": ""
 }
+
