--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://chandru127001:hfjSd3QoX5y6Gn6I@aiclassroom.hrciz.mongodb.net/?retryWrites=true&w=majority&appName=AIclassroom
+PORT=5000
